4.2
	+ Adapt apparmor profiles for Samba 4.3
	+ Make service records accept '_' prefix in their names
4.1
	+ Remove external AD integration
4.0.2
	+ Escape TXT records in nsupdate commands
	+ Update managed domain ip addresses on static interfaces change
4.0.1
	+ Invalidate openchange VDomains model cache on added, modified and
	  deleted rows operation in DomainTable model
4.0
	+ Set version to 4.0
	+ Use refactored internalNetworks from network module
	+ Do not fail to add a host if an IP address is already used by
	  other hostname
	+ Return the identifier in EBox::DNS::addDomain method
	+ Add /etc/samba/* to allowed to read in apparmor profile
3.5.1
	+ Workaround in pageTitle() method against losing of directory parameter/attribute
3.5
	+ Enable sortlist by default in /etc/zentyal/dns.conf
	+ EBox::DNS::Types::Hostname always return lowercase values
	+ Adapted to OpenLDAP removal
	+ Set version to 3.4
3.4
	+ Fix nsupdate error after domain rename
	+ Adapted apparmor configuration to Saucy
	+ Avoid lame servers message
	+ Use proper dlz library for bind9.9
	+ Use service instead of deprecated invoke-rc.d for init.d scripts
	+ Set version to 3.4
	+ Take in account virtual interfaces too when getting addresses
	  for a new domain
3.3
	+ Switch from Error to TryCatch for exception handling
	+ Lowercase LDB domains for comparision
	+ Update TXT _kerberos record on domain rename
	+ Added missing EBox::Exceptions uses
	+ Read DNS zones from samba database while provisioning
	+ Enable sortlist option by default in /etc/zentyal/dns.conf
	+ Delete migration code from old versions
	+ Fix set of dynamic attribute in domain table when samba module is enabled
	  again
	+ Do not write reverse zone files if generate_reverse_zones is false
	+ Do not set localhost as primary resolver if users module is configured
	  in external AD mode. In this case, the AD DNS server must be used.
	+ Added network as enabledepend, needed by the resolvconf management