@@ -1,3 +1,5 @@
+HEAD
+	+ Forbid use of loopback address as forwarder
 4.2
 	+ Adapt apparmor profiles for Samba 4.3
 	+ Make service records accept '_' prefix in their names
